--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "highcharts": "^7.1.2",
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "@material-ui/styles": "^4.7.1",
     "@material-ui/system": "^4.7.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "highcharts": "^7.1.2",
     "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.23.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropdown-select": "^3.6.8",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "react-window": "^1.8.5",
